# test_documents

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/rules/: python-fstrings.mdc
alembic/: env.py
alembic/versions/: 410451835799_initial_schema.py  520b9a2c1f3a_ingestion_run_started_at_nullable.py
app/: __init__.py  celery_app.py  config.py  db.py  exceptions.py  ingestion.py  main.py  models.py  normalize.py  processing.py  routes_api.py  validate.py
app/api/: __init__.py
app/api/routes/: documents.py  ingestions.py  stats.py
app/ingestion/: __init__.py  normalizer.py  parser.py  runner.py  validator.py
app/models/: __init__.py  author.py  document.py  event.py  ingestion.py  organization.py  tag.py
app/processing/: __init__.py  classification.py  deduplication.py  keywords.py  scoring.py  summary.py
app/repositories/: __init__.py  document_repo.py  ingestion_repo.py
app/schemas/: __init__.py  document.py  ingestion.py  stats.py
app/search/: __init__.py  client.py  index.py  queries.py
app/services/: document_service.py  ingestion_service.py  stats_service.py
app/tasks/: ingestion_tasks.py
app/utils/: hash.py  logger.py  text.py
scripts/: ingest.py  reindex_elasticsearch.py
tests/: conftest.py  test_document_filters.py  test_ingestion.py  test_main.py  test_normalize.py
tests/unit/: test_document_repo.py  test_ingestion_repo.py  test_processing.py
