[project]
name = "test-document-intake"
version = "0.1.0"
description = "Document intake API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.14.0",
    "python-dotenv>=1.0.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "scikit-learn>=1.8.0",
    "elasticsearch>=8.12.0,<9",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage is opt-in (e.g. CI: `uv run pytest --cov=app --cov-report=term-missing`).
# `pytest-cov` is listed so `--no-cov` is recognized when a parent config or CLI passes `--cov`.
filterwarnings = [
    "ignore::celery.fixups.django.FixupWarning",
]
